Fixed filter buttons dropped down when screen too narrow

--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@
 
 .filters-nav {
   height: 50px;
+  width: 100%;
   padding: 0;
   margin: 0;
   position: absolute;
@@ -269,7 +270,7 @@
 
 .filters-nav li {
   height: auto;
-  width: 100px;
+  width: 25%;
   float: left;
   text-align: center;
   list-style: none;
